// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders the component and isValid set to true 1`] = `
.c1 {
  border: 2px solid #00A45A;
  border-radius: 4px;
  padding: 0 10px;
  font-size: 20px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
}

.c1:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c1::-webkit-input-placeholder {
  color: #6F748B;
}

.c1:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <input
      aria-label="test1"
      class="c1"
      id="text-id-test1"
      name="test1"
      type="text"
    />
  </div>
</div>
`;

exports[`<TextField /> renders the component with error 1`] = `
.c3 {
  font-weight: 600;
  width: 100%;
  font-size: 14px;
  color: #F52D2D;
  display: block;
}

.c3:before {
  content: '';
  background: url(red-warning.svg) no-repeat;
  width: 28px;
  height: 16px;
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  border: 2px solid #F52D2D;
  border-radius: 4px;
  padding: 0 10px;
  font-size: 20px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
}

.c1:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c1::-webkit-input-placeholder {
  color: #6F748B;
}

.c1:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

.c2 {
  margin-top: 5px;
}

<div>
  <div
    class="c0"
  >
    <input
      aria-label="test1"
      class="c1"
      id="text-id-test1"
      name="test1"
      type="text"
    />
  </div>
  <span
    class="c2 c3"
    data-automation="ZA.error-test1"
    role="alert"
  >
    Ops !
  </span>
</div>
`;

exports[`<TextField /> renders the component with error and label and size 1`] = `
.c5 {
  font-weight: 600;
  width: 100%;
  font-size: 14px;
  color: #F52D2D;
  display: block;
}

.c5:before {
  content: '';
  background: url(red-warning.svg) no-repeat;
  width: 28px;
  height: 16px;
  display: inline-block;
  vertical-align: middle;
}

.c1 {
  color: #484E6C;
  line-height: 24px;
  display: block;
  font-size: 14px;
  font-weight: 400;
}

.c0 {
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
  width: 100%;
  color: #1C2139;
  display: block;
}

.c3 {
  border: 2px solid #F52D2D;
  border-radius: 4px;
  padding: 0 10px;
  font-size: 20px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
}

.c3:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c3::-webkit-input-placeholder {
  color: #6F748B;
}

.c3:disabled {
  background-color: #F8F8F9;
}

.c2 {
  max-width: 336px;
  width: 100%;
}

.c4 {
  margin-top: 5px;
}

<div>
  <label
    class="c0"
    for="text-id-test1"
  >
    yes!
  </label>
  <span
    class="c1"
  >
    Additional info
  </span>
  <div
    class="c2"
  >
    <input
      class="c3"
      id="text-id-test1"
      name="test1"
      type="text"
    />
  </div>
  <span
    class="c4 c5"
    data-automation="ZA.error-test1"
    role="alert"
  >
    Ops !
  </span>
</div>
`;

exports[`<TextField /> renders the component with label 1`] = `
.c0 {
  font-weight: 600;
  font-size: 16px;
  line-height: 24px;
  width: 100%;
  color: #1C2139;
  display: block;
}

.c2 {
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 0 10px;
  font-size: 20px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
}

.c2:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c2::-webkit-input-placeholder {
  color: #6F748B;
}

.c2:disabled {
  background-color: #F8F8F9;
}

.c1 {
  max-width: 100%;
  width: 100%;
}

<div>
  <label
    class="c0"
    for="text-id-test1"
  >
    Username
  </label>
  <div
    class="c1"
  >
    <input
      class="c2"
      id="text-id-test1"
      name="test1"
      type="text"
    />
  </div>
</div>
`;

exports[`<TextField /> renders the component with no a11y violations 1`] = `
.c1 {
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 0 10px;
  font-size: 20px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
}

.c1:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c1::-webkit-input-placeholder {
  color: #6F748B;
}

.c1:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <input
      aria-label="test1"
      class="c1"
      id="text-id-test1"
      name="test1"
      type="text"
    />
  </div>
</div>
`;

exports[`<TextField /> renders the component with prefix 1`] = `
.c2 {
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 0 10px;
  font-size: 20px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
}

.c2:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c2::-webkit-input-placeholder {
  color: #6F748B;
}

.c2:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 148px;
  width: 100%;
}

.c1 {
  position: relative;
  display: block;
}

.c1::before {
  content: '£';
  position: absolute;
  left: 10px;
  top: 0;
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 20px;
  color: #6F748B;
}

.c1 input {
  padding-left: 24px;
}

<div>
  <div
    class="c0"
  >
    <span
      class="c1"
      prefix="£"
    >
      <input
        aria-label="test1"
        class="c2"
        id="text-id-test1"
        name="test1"
        type="text"
      />
    </span>
  </div>
</div>
`;

exports[`<TextField /> renders the component with size 1`] = `
.c1 {
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 0 10px;
  font-size: 20px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  margin: 4px 0;
}

.c1:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c1::-webkit-input-placeholder {
  color: #6F748B;
}

.c1:disabled {
  background-color: #F8F8F9;
}

.c0 {
  max-width: 148px;
  width: 100%;
}

<div>
  <div
    class="c0"
  >
    <input
      aria-label="test1"
      class="c1"
      id="text-id-test1"
      name="test1"
      type="text"
    />
  </div>
</div>
`;
